--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body{
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: 5;
+    z-index: -1;
+    opacity: 0.15;
     filter: blur(1px);
     transform: scale(2.04);
 }
