--- a/style.css
+++ b/style.css
@@ -151,6 +151,11 @@ body{
   margin:0 6px;
 }
 
+.SupportPic > img {
+    width: 100%;
+    height: auto;
+}
+
 
 @media screen and (min-width: 992px){
   .dropdown-menu{
