--- a/style.css
+++ b/style.css
@@ -156,6 +156,57 @@ body{
     height: auto;
 }
 
+footer {
+  background: linear-gradient(254.72deg,rgba(255,255,255,.276) -114.85%,rgba(255,255,255,0) 69.04%);
+  padding: 80px 0 54px;
+  color: #fff;
+  font-family: Montserrat;
+  margin-top: 45px;
+  margin-bottom: -600px important;
+  border-top: 1px solid #e5e5e5;
+  height: 600px;
+}
+
+.Webform-title {
+  font-weight: bold;
+  font-size: 42px;
+  line-height: 1.215;
+  margin-bottom: 20px;
+}
+
+.Webform-description {
+  line-height: 1.55;
+  font-weight: 500;
+  font-size: 14px;
+  color: rgba(256, 256, 256, .7);
+  margin-bottom: 140px;
+}
+
+.form-control:focus{
+  color: #f7f7f7;
+  background-color: transparent;
+  border-color: #fc3b1e;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem transparent;
+}
+
+.btn-footer{
+  border: 2px solid #ff3617;
+  border-radius: 5px;
+  color: #fff;
+  text-transform: uppercase;
+  width: 100%;
+  height: 50px;
+  font-weight: 500;
+  font-size: 12px;
+  transition: background 300ms;
+  background: #fd3b1d;
+}
+
+.btn-footer:hover{
+  color: #fff;
+  background: transparent;
+}
 
 @media screen and (min-width: 992px){
   .dropdown-menu{
