--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ body{
 }
 
 footer {
-  background: linear-gradient(254.72deg,rgba(255,255,255,.276) -114.85%,rgba(255,255,255,0) 69.04%);
+  background: background: rgb(19, 11, 46);
   padding: 80px 0 54px;
   color: #fff;
   font-family: Montserrat;
