--- a/style.css
+++ b/style.css
@@ -156,8 +156,13 @@ body{
     height: auto;
 }
 
+.Webform-wrapper {
+  width: 480px;
+  max-width: 100%;
+}
+
 footer {
-  background: background: rgb(19, 11, 46);
+  background: rgb(19, 11, 46);
   padding: 80px 0 54px;
   color: #fff;
   font-family: Montserrat;
@@ -180,6 +185,92 @@ footer {
   font-size: 14px;
   color: rgba(256, 256, 256, .7);
   margin-bottom: 140px;
+}
+
+.Webform-phone {
+  list-style: none;
+  color: #fff;
+  display: inline-block;
+  text-decoration: none;
+  padding-left: 40px;
+}
+
+.Webform-email {
+  list-style: none;
+  color: #fff;
+  display: inline-block;
+  text-decoration: none;
+  margin-top: 30px;
+}
+
+.num-form {
+  color: #fff;
+  display: inline-block;
+  text-decoration: none;
+  padding-left: 40px;
+  font-weight: bold !important;
+  font-size: 30px !important;
+  position: relative;
+  line-height: 1.1;
+}
+
+.email-form {
+  color: #fff;
+  display: inline-block;
+  text-decoration: none;
+  padding-left: 40px;
+  font-weight: bold !important;
+  font-size: 30px !important;
+  position: relative;
+  line-height: 1.1;
+}
+
+.Webform-contacts a {
+  color: #fff;
+  display: inline-block;
+  text-decoration: none;
+  padding-left: 40px;
+  font-weight: bold;
+  font-size: 18px;
+  position: relative;
+  line-height: 1.1;
+}
+
+form {
+  width: 480px;
+  max-width: 100%;
+  margin-left: auto;
+}
+
+textarea {
+  background: transparent;
+  border: 1px solid rgba(256, 256, 256, .3);
+  border-radius: 5px;
+  line-height: 1.2;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 26px 24px;
+  color: #fff;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 36px;
+  padding: 6px 12px;
+  font-size: 16px;
+  margin-top: 40px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: transparent !important;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
 .form-control:focus{
