--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ footer {
   background: rgb(19, 11, 46);
   padding: 80px 0 54px;
   color: #fff;
-  font-family: Montserrat;
+  font-family: "Montserrat";
   margin-top: 45px;
   margin-bottom: -600px important;
   border-top: 1px solid #e5e5e5;
