--- a/style.css
+++ b/style.css
@@ -156,133 +156,73 @@ body{
     height: auto;
 }
 
-.Webform-wrapper {
-  width: 480px;
-  max-width: 100%;
-}
-
-footer {
-  background: rgb(19, 11, 46);
-  padding: 80px 0 54px;
-  color: #fff;
-  font-family: "Montserrat";
-  margin-top: 45px;
-  margin-bottom: -600px important;
-  border-top: 1px solid #e5e5e5;
-  height: 600px;
-}
-
-.Webform-title {
-  font-weight: bold;
-  font-size: 42px;
-  line-height: 1.215;
-  margin-bottom: 20px;
-}
-
-.Webform-description {
-  line-height: 1.55;
-  font-weight: 500;
-  font-size: 14px;
-  color: rgba(256, 256, 256, .7);
-  margin-bottom: 140px;
-}
-
-.Webform-phone {
-  list-style: none;
-  color: #fff;
-  display: inline-block;
-  text-decoration: none;
-  padding-left: 40px;
-}
-
-.Webform-email {
-  list-style: none;
-  color: #fff;
-  display: inline-block;
-  text-decoration: none;
-  margin-top: 30px;
-}
-
-.num-form {
-  color: #fff;
-  display: inline-block;
-  text-decoration: none;
-  padding-left: 40px;
-  font-weight: bold !important;
-  font-size: 30px !important;
+.footer-region{
   position: relative;
-  line-height: 1.1;
-}
-
-.email-form {
-  color: #fff;
-  display: inline-block;
-  text-decoration: none;
-  padding-left: 40px;
-  font-weight: bold !important;
-  font-size: 30px !important;
-  position: relative;
-  line-height: 1.1;
-}
-
-.Webform-contacts a {
-  color: #fff;
-  display: inline-block;
-  text-decoration: none;
-  padding-left: 40px;
-  font-weight: bold;
-  font-size: 18px;
-  position: relative;
-  line-height: 1.1;
-}
-
-form {
-  width: 480px;
-  max-width: 100%;
-  margin-left: auto;
-}
-
-textarea {
-  background: transparent;
-  border: 1px solid rgba(256, 256, 256, .3);
-  border-radius: 5px;
-  line-height: 1.2;
-  font-weight: 500;
-  font-size: 14px;
-  padding: 26px 24px;
-  color: #fff;
-}
-
-.form-control {
-  display: block;
   width: 100%;
-  height: 36px;
-  padding: 6px 12px;
-  font-size: 16px;
-  margin-top: 40px;
-  line-height: 1.42857143;
-  color: #555;
-  background-color: transparent !important;
-  background-image: none;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  height: auto;
+}
+
+.footer-region-background{
+  position: absolute;
+  z-index: -2;
+  background: linear-gradient(254.72deg,rgba(255,255,255,.276) -114.85%,rgba(255,255,255,0) 69.04%),#040613;
+  left:0;
+  right:0;
+  top:0;
+  bottom:0;
+}
+
+.phone, .email{
+  font-size:20px;
+}
+
+.form-group{
+  width: 100%;
+}
+
+.info{
+  background: transparent;
+}
+
+.info:focus{
+  background: transparent;
 }
 
 .form-control:focus{
   color: #f7f7f7;
   background-color: transparent;
-  border-color: #fc3b1e;
+  border-color: #ff2200;
   outline: 0;
   box-shadow: 0 0 0 0.25rem transparent;
 }
 
+.text-head-footer{
+  font-weight: bold;
+  font-size: 42px;
+  line-height: 1.215;
+  color: #fff;
+}
+
+.form-politics{
+  color: #ad1700;
+  text-decoration: none;
+}
+
+.form-politics:hover{
+  color: #e76652;
+  text-decoration: underline;
+}
+
+.text-extra-footer{
+  line-height: 1.55;
+  font-weight: 500;
+  font-size: 14px;
+  color: rgba(256,256,256,.7);
+  margin-bottom: 200px;
+}
+
 .btn-footer{
-  border: 2px solid #ff3617;
+  border: 2px solid #f14d34;
   border-radius: 5px;
   color: #fff;
   text-transform: uppercase;
@@ -291,7 +231,7 @@ textarea {
   font-weight: 500;
   font-size: 12px;
   transition: background 300ms;
-  background: #fd3b1d;
+  background: #f14d34;
 }
 
 .btn-footer:hover{
