--- a/style.css
+++ b/style.css
@@ -141,6 +141,93 @@ body{
   position: center;
 }
 
+#ReviewsSlider{
+  max-width: 768px;
+  padding:  60px 5px 60px 60px;
+  border-radius: 5px;
+  border: solid 1px rgb(41, 43, 44, 0.25);
+  box-shadow: 0 4px 60px rgb(41, 43, 44, 0.25);
+  width: 100%;
+}
+
+.arrows-slick{
+  border-top: 0;
+  border-left: solid 1px rgb(41, 43, 44, 0.25);
+}
+
+.reviews{
+  margin-top: 50px;
+  margin-bottom: 100px;
+}
+
+.reviews-content{
+  height: auto;
+  position: relative;
+  background: white;
+}
+
+.reviews-content:before{
+  content: "";
+  display: block;
+  background: #fff;
+  opacity: .5;
+  border:  solid 1px rgba(27, 28, 29, 0.25);
+  box-sizing: border-box;
+  box-shadow:0 4px 60px rgba(22, 23, 24, 0.25);
+  border-radius: 5px;
+  position: absolute;
+  top: -44px;
+  bottom: 0;
+  left: 64px;
+  right: 64px;
+  z-index: -1;
+}
+
+.reviews-content:after{
+  content: "";
+  display: block;
+  background: #fff;
+  opacity: .34;
+  border: solid 1px rgb(41, 43, 44, 0.1);
+  box-sizing: border-box;
+  box-shadow: 0 4px 60px rgb(162 162 162 / 25%);
+  border-radius: 5px;
+  position: absolute;
+  top: -78px;
+  bottom: 0;
+  left: 128px;
+  right: 128px;
+  z-index: -2;
+}
+
+.reviews-slide img{
+  margin:0 0 2em 0;
+}
+#prev{
+  background: url(img/left.png) no-repeat center;
+  background-size: contain;
+  width:16px;
+  height:32px;
+  margin:0 16px 0 0;
+}
+#next{
+  background: url(img/right.png) no-repeat center;
+  background-size: contain;
+  width:16px;
+  height:32px;
+  margin:0 0 0 16px;
+}
+.arrows-block{
+  font-size: 24px;
+  color:grey;
+}
+.current{
+  color:black;
+}
+#nextReview:focus, #prevReview:focus{
+  box-shadow: 0 4px 60px transparent;
+}
+
 .PartnersSliderWrapper{
   margin: 50px 0 5px 0;
 }
