--- a/style.css
+++ b/style.css
@@ -331,3 +331,140 @@ body{
       background-color: #f14d34;
   }
 }
+
+.competencies {
+  padding: 100px 0;
+  font-family: Montserrat;
+}
+div{
+  display: block;
+}
+.competency-title{
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.competencies-description{
+  margin-bottom: 55px;
+}
+.competency-body{
+  font-size: 15px;
+  margin-top: 20px;
+}
+
+.support {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.support-service{
+  position: relative;
+  margin: 0 5px;
+  background: rgb(255, 255, 255);
+  border-radius: 5px;
+  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.103);
+  height: 100%;
+  padding: 25px 25px 45px;
+  min-height: 292px;
+}
+.serv-cols{
+  margin-bottom: 7px;
+  padding: 15px 0;
+}
+.support-text{
+  text-align: center;
+  font-weight: bold;
+}
+.serv-num{
+  font-size: 12px;
+  color: rgb(160, 160, 160);
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.serv-article{
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.serv-body-text{
+  position: relative;
+  z-index: 10;
+  font-size: 16px;
+  color: rgb(96, 101, 114);
+  line-height: 1.5;
+}
+.serv-img{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 5;
+}
+.support .support-row {
+  margin-bottom: -212px;
+}
+
+.support-row {
+  padding: 0 12px;
+  position: relative;
+  z-index: 20;
+}
+/**/
+
+/*support+*/
+@media (max-width: 1199px){
+  .experience {
+    padding: 280px 0 40px;
+  }
+}
+@media (max-width: 1300px){
+  .experience {
+    padding: 335px 0 120px;
+  }
+}
+.experience {
+    padding: 350px 0 150px;
+    position: relative;
+    background: linear-gradient(270deg,rgba(4,6,19,1), rgba(29, 31, 44, 0.3) 65.71%),#040613;
+    font-family: Montserrat;
+}
+.experience .container {
+  position: relative;
+  z-index: 15;
+}
+.experience h2 {
+  color: white;
+  font-size: 36px;
+  font-weight: 1000;
+  margin-bottom: 40px;
+}
+.experience-body {
+  border-left: 3px solid red;
+  padding-left: 15px;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  height: 100%;
+  min-height: 60px;
+  width: 240px;
+  max-width: 100%;
+  font-weight: 500;
+  font-size: 16px;
+  color: #c4c4c4;
+}
+.laptop-pic {
+  padding: 0;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 35%;
+  z-index: 10;
+}
+.laptop-pic img {
+  width: 100%;
+  height: auto;
+  transform: translateY(16%);
+}
+@media (max-width: 767px){
+  .laptop-pic {
+    position: relative;
+    width: 70%;
+  }
+}
