--- a/style.css
+++ b/style.css
@@ -32,6 +32,20 @@ body{
   transition: background 300ms;
   padding: 20px 22px;
 }
+#team{
+font-size: 42px;
+color: #050c33;
+font-weight: bold;
+margin-bottom: 60px;
+}
+.member_picture img{
+max-width: 100%;
+max-height: 100%;
+}
+.member_discription,.member_name{
+font-size: 16px;
+color: #050C33;
+}
 
 .btn-tariff:hover{
   color: #fff;
