--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body{
   transition: background 300ms;
   padding: 20px 22px;
 }
+/*Team*/
 #team{
 font-size: 42px;
 color: #050c33;
@@ -46,7 +47,7 @@ max-height: 100%;
 font-size: 16px;
 color: #050C33;
 }
-
+/*team end*/
 .btn-tariff:hover{
   color: #fff;
   background: #f14d34;
