--- a/style.css
+++ b/style.css
@@ -466,7 +466,7 @@ div{
   }
 }
 #tariff{
-  padding: 100px 0 50px;
+  padding-top: 70px;
 }
 .price-block-wrapper{
   transition: all 0.5s ease-in-out; 
